k8s/base/network-policies/database/egress/allow-cnpg-internal-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-internal-egress
  namespace: database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: jangingmall-postgres
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              cnpg.io/cluster: jangingmall-postgres
      ports:
        - protocol: TCP
          port: 5432
