k8s/base/network-policies/database/egress/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: database
spec:
  podSelector: {}
  policyTypes:
    - Egress
